# pkg/handlers/updateItem_handler.go
@@ -10,23 +10,17 @@ import (
 	"gopkg.in/mgo.v2/bson"
 )
 
-// UpdateItemByName handles the PUT /cars/{id} endpoint.
+// UpdateItemByName godoc
 // @Summary Update a item by Name
 // @Description Update an existing item with the provided details
 // @Tags Items
 // @Accept json
 // @Produce json
 // @Param name path string true "Item item_name"
-// @Param itemData body models.Item true "Car details"
-// @Success 200 {string} string "Updated successfully"
-// @Router /api/items/{name} [put]
+// @Param itemData body models.Item true "Item details"
+// @Success 200 {object} gin.H "message": "Updated successfully"
+// @Router /api/items [put]
 func (h *Handler) UpdateItemByName(c *gin.Context) {
-	// id := c.Param("id")
-	// carid, err := primitive.ObjectIDFromHex(id)
-	// if err != nil {
-	// 	c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid item ID"})
-	// 	return
-	// }
 	nameParam := c.Query("name")
 	filter := bson.M{"item_name": nameParam}
 	_, err := h.Service.GetItemByName(primitive.M(filter)) //checking for wheather the item exists or not
@@ -40,14 +34,9 @@ func (h *Handler) UpdateItemByName(c *gin.Context) {
 		c.Abort()
 		return
 	}
-	// cerr := h.Service.UpdateItemByID(itemData, carid)
-	// if cerr != nil {
-	// 	errorutil.HandleErrorResponse(c, err)
-	// 	return
-	// }
-	cerr := h.Service.UpdateItemByName(itemData, nameParam)
-	if cerr != nil {
-		errorutil.HandleErrorResponse(c, cerr)
+	ierr := h.Service.UpdateItemByName(itemData, nameParam)
+	if ierr != nil {
+		errorutil.HandleErrorResponse(c, ierr)
 		return
 	}
 	c.JSON(http.StatusOK, gin.H{"message": "Updated successfully"})
